// Bun Snapshot v1, https://goo.gl/fbAQLP

exports[`status loader open 1`] = `
{
  "__typename": "ChecklistOpen",
  "_key": "work-instance_8930ad12-471f-406a-a4b6-0f0f27e80396",
  "closedAt": null,
  "dueAt": null,
  "inProgressAt": null,
  "openedAt": {
    "__typename": "ZonedDateTime",
    "epochMilliseconds": "1728595242892.000000",
    "timeZone": "America/Denver",
  },
}
`;

exports[`status loader item - open 1`] = `
{
  "__typename": "ChecklistOpen",
  "_key": "wri_2d9cf120-1d88-4b5a-8e8a-b716a56d6729",
  "closedAt": null,
  "dueAt": null,
  "inProgressAt": null,
  "openedAt": {
    "__typename": "ZonedDateTime",
    "epochMilliseconds": "1728595242892.000000",
    "timeZone": "America/Denver",
  },
}
`;
